--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 gstd = { git = "https://github.com/gear-tech/gear.git", features=["debug"] }
 scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "full"] }
+hashbrown = "0.12.3"
 
 [build-dependencies]
 gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
